# gomesh-broker

./: CLAUDE.md  Cargo.toml
docs/decisions/: 0001-use-rmqtt-as-embedded-broker.md  0002-ed25519-jwt-authentication.md  0003-topic-authorization-and-acl.md  0004-module-structure-for-parallel-work.md  0005-process-for-onboarding-new-observers.md
src/: config.rs  lib.rs  main.rs  types.rs
src/auth/: jwt.rs  mod.rs  publisher.rs  subscriber.rs
src/authz/: acl.rs  iata.rs  mod.rs  topic.rs
src/filter/: mod.rs
src/hooks/: auth_handler.rs  delivery_handler.rs  mod.rs  publish_handler.rs  subscribe_handler.rs
