[package]
name = "gomesh-broker"
version = "0.1.0"
edition = "2024"
description = "MeshCore MQTT broker with Ed25519 JWT authentication and topic-level authorization"

[dependencies]
ed25519-dalek = { version = "2", features = ["std"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
argon2 = "0.5"
phf = { version = "0.11", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
